# internal-access-samples

./: .gitignore  README.md
.github/workflows/: deploy-lambda-app.yml  deploy.yml
001-python-flask/: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
001-python-flask/templates/: _primary.html  index.html
002-node-express/: Dockerfile  app.js  package.json
002-node-express/views/: index.ejs
003-node-express-esm-nunjucks/: .gitignore  Dockerfile  nodemon.json  package-lock.json  package.json  tsconfig.json
003-node-express-esm-nunjucks/@types/express-session/: index.d.ts
003-node-express-esm-nunjucks/src/: app.ts  types.ts
003-node-express-esm-nunjucks/src/client/: oidcClient.ts
003-node-express-esm-nunjucks/src/config/: nunjucks.ts
003-node-express-esm-nunjucks/src/routes/: index.ts
003-node-express-esm-nunjucks/src/views/sign-in/: index.njk
deployments/: main.tf
deployments/001-python-flask/: main.tf
deployments/002-node-express/: main.tf
examples/001-python-flask/: README.md  app.py  pyproject.toml
modules/lambda-app/: main.tf
